title edit, infobox, infoDetail modal add

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=%REACT_APP_MAPS_CLIENT%"></script>
-    <title>React App</title>
+    <title>종합상황관리 대시보드</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
